nullaway_error_eb85df28-7e56-4066-8fed-b94d606b6b81.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/ILayerList.java:73: error: [NullAway] dereferenced expression x.getName() is @Nullable
    Optional<IMapObjectLayer> layer = this.getMapObjectLayers().stream().filter(x -> x.getName().equals(layerName)).findFirst();
                                                                                                ^
    (see http://t.uber.com/nullaway )
